Archive/58f77f312c57e2a29101d1992ebbca13-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In constructor 'X::X(int)':
main.cpp:41:40: error: expected primary-expression before '{' token
     , m_a8(static_cast<const A (&)[2]>({}))
                                        ^
main.cpp:41:40: error: expected ')' before '{' token
main.cpp:41:42: error: invalid initializer for array member 'A X::m_a8 [2]'
     , m_a8(static_cast<const A (&)[2]>({}))
                                          ^
main.cpp:41:43: error: expected '{' before ')' token
     , m_a8(static_cast<const A (&)[2]>({}))
                                           ^
